[tool.poetry]
name = "openai-api-demo"
version = "0.1.0"
description = ""
authors = ["Hubert Shelley <hubertshelley@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.7"
pydantic = "^2.5.2"
torch = "^2.1.1"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
loguru = "^0.7.2"
sse-starlette = "^1.8.2"
transformers = "^4.35.2"
sentencepiece = "^0.1.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
